Bug 906091 - Post-barrier globals, but only add to the store buffer on first write r=terrence